--- a/howler/wally_search/templates/wally/search.html
+++ b/howler/wally_search/templates/wally/search.html
@@ -37,7 +37,7 @@
                                     <label>
                                         <input type="checkbox" name="show_hits_body"
                                                id="show_hits_body" {% if show_hits_body %}
-                                               checked="checked"{% endif %}/> {% trans "show hits in body" %}
+                                               checked="checked"{% endif %}/> {% trans "show hits" %}
                                     </label>
                                 </div>
                             </div>
