--- a/howler/wally_search/templates/wally/search.html
+++ b/howler/wally_search/templates/wally/search.html
@@ -1,7 +1,9 @@
 {% extends "wally/base_search_form.html" %}
 {% load i18n %}
 
-
+{% block search_type %}
+    <input type="hidden" name="search_type" id="search_type" value="email"/>
+{% endblock %}
 {% block search_form_checkboxes %}
     <div class="checkbox">
         <label>
