- show_hits_body -> show_hits - extracted base-search-function

--- a/howler/wally_search/templates/wally/base_search_form.html
+++ b/howler/wally_search/templates/wally/base_search_form.html
@@ -29,8 +29,8 @@
                                 {% endblock %}
                                 <div class="checkbox" title="{{ saved_in_session_text }}">
                                     <label>
-                                        <input type="checkbox" name="show_hits_body"
-                                               id="show_hits_body" {% if show_hits_body %}
+                                        <input type="checkbox" name="show_hits"
+                                               id="show_hits" {% if show_hits %}
                                                checked="checked"{% endif %}/> {% trans "show hits" %}
                                     </label>
                                 </div>
