removed unused css class table-email

--- a/howler/wally_search/templates/wally/base_results.html
+++ b/howler/wally_search/templates/wally/base_results.html
@@ -11,7 +11,7 @@
 {% if hit_list %}
     {% include 'common/dt_childtoggler.html' %}
 
-    <table class="table table-striped-custom table-email" id="js_result_table">
+    <table class="table table-striped-custom" id="js_result_table">
         <thead>
         <tr>
             <th class="w_toggle_col"></th>
