--- a/howler/wally_search/templates/wally/searchirc.html
+++ b/howler/wally_search/templates/wally/searchirc.html
@@ -9,8 +9,8 @@
 {% endblock %}
 
 {% block search_form_sort_fields_options %}
-    <option value="@timestamp" {% if sort_field == 'date' %} selected="selected"{% endif %}>{% trans "Sent (JST)" %}</option>
+    <option value="@timestamp" {% if sort_field == '@timestamp' %} selected="selected"{% endif %}>{% trans "Sent (JST)" %}</option>
     <option value="_score" {% if sort_field == '_score' %} selected="selected"{% endif %}>{% trans "Score" %}</option>
-    <option value="username" {% if sort_field == 'username' %}
+    <option value="username.keyword" {% if sort_field == 'username.keyword' %}
             selected="selected"{% endif %}>{% trans "Sender" %}</option>
 {% endblock %}
