--- a/howler/settings/templates/settings/base_settings.html
+++ b/howler/settings/templates/settings/base_settings.html
@@ -26,7 +26,7 @@
 {% endblock %}
 
 {% block main_pre %}
-    <h2>{% trans "Settings" %}</h2>
+    <h2>{% trans "Settings - Mail and IRC search" %}</h2>
 {% endblock %}
 
 {% block header_content %}
