--- a/howler/settings/templates/settings/synonym_index.html
+++ b/howler/settings/templates/settings/synonym_index.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block main %}
-    {% trans "Update synonyms to elasticsearch indices (mail and IRC)" as update_synonyms_button %}
+    {% trans "Update synonyms to elasticsearch indices (Mail and IRC)" as update_synonyms_button %}
     <div class="panel panel-default">
         <div class="panel-heading">
             {% trans "Manage here all synonyms for the mail and IRC indices." %}
