--- a/howler/wally_search/templates/wally/resultsirc.html
+++ b/howler/wally_search/templates/wally/resultsirc.html
@@ -44,8 +44,7 @@
         </div>
     </td>
     <td class="text-nowrap">
-        {{ hit.sent }}
-{#        {{ hit.sent|date:"Y/m/d H:i" }}#}
+        {{ hit.sent|date:"Y/m/d H:i" }}
     </td>
     <td class="text-nowrap">
         {% if hit.meta.highlight.username.0 %}
