--- a/howler/wally_search/templates/wally/searchmail.html
+++ b/howler/wally_search/templates/wally/searchmail.html
@@ -17,6 +17,13 @@
                    id="only_attachment"/> {% trans "only emails with attachments" %}
         </label>
     </div>
+    <div class="checkbox" title="{{ saved_in_session_text }}">
+        <label>
+            <input type="checkbox" name="show_hits"
+                   id="show_hits" {% if show_hits %}
+                   checked="checked"{% endif %}/> {% trans "show hits" %}
+        </label>
+    </div>
 {% endblock %}
 
 {% block search_form_sort_fields_options %}
