--- a/howler/wally_search/templates/wally/base_wally.html
+++ b/howler/wally_search/templates/wally/base_wally.html
@@ -17,4 +17,5 @@
 
 {% block scripts %}
     <script type="text/javascript" src='{% static 'wally/wally.js' %}'></script>
+    <script type="text/javascript" src='{% static 'wally/irc.js' %}'></script>
 {% endblock %}
