--- a/howler/wally_search/templates/wally/resultsmail.html
+++ b/howler/wally_search/templates/wally/resultsmail.html
@@ -7,6 +7,7 @@
 {% trans "Receiver" as receiver %}
 {% trans "Attachments" as attachments %}
 {% block col_header %}
+    <th class="w_toggle_col"></th>
     <th></th>
     <th class="text-nowrap">{% trans "Subject" %}</th>
     <th class="text-nowrap">{% trans "Sent (JST)" %}</th>
@@ -16,7 +17,16 @@
     <th class="text-nowrap text-right">{% trans "Score" %}</th>
 {% endblock %}
 
+{% block table_element %}
+    {% include 'common/dt_childtoggler.html' %}
+    <table class="table table-striped-custom" id="js_result_table">
+{% endblock %}
+
 {% block col_data %}
+    <td class="details-control w_toggle_col">
+        <span class="glyphicon glyphicon-plus"></span>
+        <span class="glyphicon glyphicon-minus"></span>
+    </td>
     <td>
         <a href="https://co-conv.jp/go?INFO{{ hit.meta.id }}" target="_blank">
                         <span class="glyphicon glyphicon-eye-open"
@@ -24,13 +34,13 @@
         </a>
     </td>
     <td>
-                    <span>
-                        {% if hit.meta.highlight.subject.0 %}
-                            {{ hit.meta.highlight.subject.0|safe }}
-                        {% else %}
-                            {{ hit.subject }}
-                        {% endif %}
-                    </span>
+        <span>
+            {% if hit.meta.highlight.subject.0 %}
+                {{ hit.meta.highlight.subject.0|safe }}
+            {% else %}
+                {{ hit.subject }}
+            {% endif %}
+        </span>
         <span style="display: none">{{ hit.meta.id }}</span>
         <div class="collapse js_popover_content">
             {% if hit.meta.highlight.replyToEmail.0 %}
