--- a/howler/wally_search/templates/wally/searchirc.html
+++ b/howler/wally_search/templates/wally/searchirc.html
@@ -5,11 +5,12 @@
     <input type="hidden" name="search_type" id="search_type" value="irc"/>
 {% endblock %}
 {% block search_form_checkboxes %}
-
+     <input type="checkbox" id="show_hits" style="display:none;">
 {% endblock %}
 
 {% block search_form_sort_fields_options %}
-    <option value="@timestamp" {% if sort_field == '@timestamp' %} selected="selected"{% endif %}>{% trans "Sent (JST)" %}</option>
+    <option value="@timestamp" {% if sort_field == '@timestamp' %}
+            selected="selected"{% endif %}>{% trans "Sent (JST)" %}</option>
     <option value="_score" {% if sort_field == '_score' %} selected="selected"{% endif %}>{% trans "Score" %}</option>
     <option value="username.keyword" {% if sort_field == 'username.keyword' %}
             selected="selected"{% endif %}>{% trans "Sender" %}</option>
