--- a/howler/wally_search/templates/wally/base_search_form.html
+++ b/howler/wally_search/templates/wally/base_search_form.html
@@ -152,6 +152,10 @@
                             </div>
                         </div>
                     </div>
+
+                    {% block search_form_additional %}
+
+                    {% endblock %}
                 </div>
             </div>
         </div>
