--- a/howler/settings/templates/settings/base_settings.html
+++ b/howler/settings/templates/settings/base_settings.html
@@ -20,7 +20,10 @@
             <a href="{{ http_kibana }}" target="_blank">{% trans "Elasticsearch Kibana" %}</a>
         </li>
         <li>
-            <a href="{{ http_kibana_dashboard }}" target="_blank">{% trans "Kibana Main Dashboard (Last 2 years)" %}</a>
+            <a href="{{ http_kibana_dashboard }}" target="_blank">{% trans "Kibana Email Dashboard (Last 2 years)" %}</a>
+        </li>
+    <li>
+            <a href="{{ http_kibana_irc_dashboard }}" target="_blank">{% trans "Kibana IRC Dashboard (Last 5 years)" %}</a>
         </li>
     </ul>
 {% endblock %}
