--- a/howler/wally_search/templates/wally/resultsirc.html
+++ b/howler/wally_search/templates/wally/resultsirc.html
@@ -16,6 +16,7 @@
             <input type="hidden" name="origin_timestamp" value="{{ hit.timestamp_raw }}"/>
             <input type="hidden" name="channel" value="{{ hit.channel }}"/>
             <input type="hidden" name="query" value="{{ query }}"/>
+            <input type="hidden" name="number_results" value="{% if day_mode %}100{% else %}30{% endif %}"/>
         </form>
         <span class="js_submit-span glyphicon glyphicon-plus" title="{% trans "View IRC log" %}"></span>
         <span class="glyphicon glyphicon-minus"></span>
