IRC detail also thin rows

--- a/howler/wally_search/templates/wally/resultsircdetail.html
+++ b/howler/wally_search/templates/wally/resultsircdetail.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block table_element %}
-    <table class="table table-striped-custom js_result_table_detail">
+    <table class="table table-striped-custom table-condensed js_result_table_detail">
 {% endblock %}
 
 {% block col_header %}
